--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@prisma/client": "^2.0.0-beta.3",
     "micro": "^9.3.5-canary.3",
     "next": "^9.3.6",
+    "node-fetch": "^2.6.0",
     "openpgp": "^4.10.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@prisma/cli": "^2.0.0-beta.3",
     "@types/node": "^13.13.4",
+    "@types/node-fetch": "^2.5.7",
     "@types/openpgp": "^4.4.10",
     "@types/react": "^16.9.34",
     "typescript": "^3.8.3"
