--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "repository": "git@github.com:browser-pgp/simple-auth-server.git",
   "author": "shynome <shynome@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "docker:start": "yarn next start --port $PORT"
+  },
   "dependencies": {
     "@material-ui/core": "^4.9.12",
+    "@material-ui/icons": "^4.9.1",
     "@prisma/client": "^2.0.0-beta.3",
     "dotenv": "^8.2.0",
     "micro": "^9.3.5-canary.3",
@@ -14,6 +18,7 @@
     "node-fetch": "^2.6.0",
     "openpgp": "^4.10.4",
     "react": "^16.13.1",
+    "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
@@ -23,6 +28,7 @@
     "@types/node-fetch": "^2.5.7",
     "@types/openpgp": "^4.4.10",
     "@types/react": "^16.9.34",
+    "@types/react-copy-to-clipboard": "^4.3.0",
     "typescript": "^3.8.3"
   }
 }
