--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.51",
     "@prisma/client": "^2.0.0-beta.3",
     "dotenv": "^8.2.0",
     "micro": "^9.3.5-canary.3",
     "next": "^9.3.6",
     "node-fetch": "^2.6.0",
+    "notistack": "^0.9.11",
     "openpgp": "^4.10.4",
+    "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.13.1"
